--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@socket.io/redis-streams-adapter",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "The Socket.IO adapter based on Redis Streams, allowing to broadcast events between several Socket.IO servers",
   "license": "MIT",
   "repository": {
@@ -42,5 +42,10 @@
   },
   "engines": {
     "node": ">=14.0.0"
-  }
+  },
+  "keywords": [
+    "socket.io",
+    "redis",
+    "adapter"
+  ]
 }
