test: run tests against a Redis cluster
Related:

- https://github.com/socketio/socket.io-redis-streams-adapter/issues/3
- https://github.com/socketio/socket.io-redis-streams-adapter/issues/10

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "format:check": "prettier --parser typescript --check lib/**/*.ts test/**/*.ts",
     "format:fix": "prettier --parser typescript --write lib/**/*.ts test/**/*.ts",
     "prepack": "npm run compile",
-    "test": "npm run format:check && npm run compile && nyc mocha --bail --require ts-node/register test/**/*.ts"
+    "test": "npm run format:check && npm run compile && npm run test:redis-standalone && npm run test:redis-cluster",
+    "test:redis-standalone": "nyc mocha --require ts-node/register test/**/*.ts",
+    "test:redis-cluster": "REDIS_CLUSTER=1 mocha --require ts-node/register test/**/*.ts"
   },
   "dependencies": {
     "@msgpack/msgpack": "~2.8.0",
