--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "format:check": "prettier --parser typescript --check lib/**/*.ts test/**/*.ts",
     "format:fix": "prettier --parser typescript --write lib/**/*.ts test/**/*.ts",
     "prepack": "npm run compile",
-    "test": "npm run format:check && npm run compile && npm run test:redis-standalone && npm run test:redis-cluster",
+    "test": "npm run format:check && npm run compile && npm run test:redis-standalone && npm run test:redis-cluster && npm run test:ioredis-standalone && npm run test:ioredis-cluster",
     "test:redis-standalone": "nyc mocha --require ts-node/register test/**/*.ts",
-    "test:redis-cluster": "REDIS_CLUSTER=1 mocha --require ts-node/register test/**/*.ts"
+    "test:redis-cluster": "REDIS_CLUSTER=1 mocha --require ts-node/register test/**/*.ts",
+    "test:ioredis-standalone": "REDIS_LIB=ioredis mocha --require ts-node/register test/**/*.ts",
+    "test:ioredis-cluster": "REDIS_LIB=ioredis REDIS_CLUSTER=1 mocha --require ts-node/register test/**/*.ts"
   },
   "dependencies": {
     "@msgpack/msgpack": "~2.8.0",
@@ -33,6 +35,7 @@
     "@types/mocha": "^8.2.1",
     "@types/node": "^18.15.11",
     "expect.js": "0.3.1",
+    "ioredis": "^5.3.2",
     "mocha": "^10.1.0",
     "nyc": "^15.1.0",
     "prettier": "^2.8.7",
