--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "test": "npm run format:check && npm run compile && npm run test:redis-standalone && npm run test:redis-cluster && npm run test:ioredis-standalone && npm run test:ioredis-cluster && npm run test:valkey-standalone",
     "test:redis-standalone": "nyc mocha --require ts-node/register test/**/*.ts",
     "test:redis-cluster": "cross-env REDIS_CLUSTER=1 mocha --require ts-node/register test/**/*.ts",
+    "test:redis-v5-standalone": "cross-env REDIS_LIB=redis-v5 mocha --require ts-node/register test/**/*.ts",
+    "test:redis-v5-cluster": "cross-env REDIS_LIB=redis-v5 REDIS_CLUSTER=1 mocha --require ts-node/register test/**/*.ts",
     "test:ioredis-standalone": "cross-env REDIS_LIB=ioredis mocha --require ts-node/register test/**/*.ts",
     "test:ioredis-cluster": "cross-env REDIS_LIB=ioredis REDIS_CLUSTER=1 mocha --require ts-node/register test/**/*.ts",
     "test:valkey-standalone": "cross-env VALKEY=1 mocha --require ts-node/register test/**/*.ts"
@@ -45,6 +47,7 @@
     "nyc": "^15.1.0",
     "prettier": "^2.8.7",
     "redis": "^4.6.5",
+    "redis-v5": "npm:redis@~5.8.3",
     "rimraf": "^5.0.5",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
