--- a/package.json
+++ b/package.json
@@ -17,13 +17,7 @@
     "format:check": "prettier --parser typescript --check \"lib/**/*.ts\" \"test/**/*.ts\"",
     "format:fix": "prettier --parser typescript --write \"lib/**/*.ts\" \"test/**/*.ts\"",
     "prepack": "npm run compile",
-    "test": "npm run format:check && npm run compile && npm run test:redis-standalone && npm run test:redis-cluster && npm run test:ioredis-standalone && npm run test:ioredis-cluster && npm run test:valkey-standalone",
-    "test:redis-standalone": "nyc mocha --import=tsx test/**/*.ts",
-    "test:redis-cluster": "cross-env REDIS_CLUSTER=1 mocha --import=tsx test/**/*.ts",
-    "test:redis-cluster-multiplex": "cross-env REDIS_CLUSTER=1 mocha --import=tsx test/**/*.ts",
-    "test:ioredis-standalone": "cross-env REDIS_LIB=ioredis mocha --import=tsx test/**/*.ts",
-    "test:ioredis-cluster": "cross-env REDIS_LIB=ioredis REDIS_CLUSTER=1 mocha --import=tsx test/**/*.ts",
-    "test:valkey-standalone": "cross-env VALKEY=1 mocha --import=tsx test/**/*.ts"
+    "test": "npm run format:check && npm run compile && nyc mocha --import=tsx test/test-runner.ts"
   },
   "prettier": {
     "endOfLine": "auto"
@@ -39,7 +33,6 @@
     "@types/expect.js": "^0.3.29",
     "@types/mocha": "^8.2.1",
     "@types/node": "^18.15.11",
-    "cross-env": "7.0.3",
     "expect.js": "0.3.1",
     "ioredis": "^5.3.2",
     "mocha": "^10.1.0",
