--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "mocha": "^10.1.0",
     "nyc": "^15.1.0",
     "prettier": "^2.8.7",
-    "redis": "^4.6.5",
+    "redis": "~5.10.0",
     "rimraf": "^5.0.5",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
